<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Inbbbox</string>
    <string name="block_canary_display_activity_label" translatable="false">Inbbbox block canary</string>
    <string name="leak_canary_display_activity_label" translatable="false">Inbbbox leak canary</string>

    <string name="login_button_text">Login with Dribbble</string>
    <string name="login_inbbbox_text" translatable="false">Each shot swipes</string>
    <string name="undefined_api_error">Unknown server error</string>
    <string name="invalid_user_error">Invalid user</string>
    <string name="invalid_outh_url">Invalid oauth url</string>
    <string name="wrong_oauth_state_key">Something went wrong while logging in, try again</string>

    <string name="tab_following_title">Following</string>
    <string name="tab_shots_title">Shots</string>
    <string name="tab_likes_title">Likes</string>
    <string name="tab_buckets_title">Buckets</string>
    <string name="tab_info_title">Info</string>
    <string name="tab_projects_title">Projects</string>

    <string name="action_list_view">List view</string>
    <string name="action_grid_view">Grid view</string>
    <string name='action_follow'>Follow</string>
    <string name="action_unfollow">Unfollow</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_create">Create</string>
    <string name="action_delete">Delete</string>
    <string name="action_warning">Warning</string>
    <string name="action_share">Share</string>

    <string name="drawer_group_notification">Notifications</string>
    <string name="drawer_enable_reminder">Enable daily reminder</string>
    <string name="drawer_set_reminder">Set daily reminder at</string>
    <string name="drawer_group_stream">Inbbbox Stream Source</string>
    <string name="drawer_following">Following</string>
    <string name="drawer_new_today">New Today</string>
    <string name="drawer_popular_today">Popular Today</string>
    <string name="drawer_debuts">Debuts</string>
    <string name="drawer_group_customization">Customization</string>
    <string name="drawer_shot_details">Shot Details on Homescreen</string>
    <string name="drawer_night_mode">Night Mode</string>
    <string name="drawer_logout">Log out</string>

    <string name="change_stream_source_error">At least one stream source should be checked</string>

    <string name="fragment_like_empty_text">Like some shots first!</string>
    <string name="fragment_followers_empty_text">Follow someone first!</string>
    <string name="fragment_buckets_empty_text_before_icon">Create some buckets</string>
    <string name="fragment_buckets_empty_text_after_icon">first!</string>
    <string name="loading_more_buckets">Loading more buckets</string>
    <plurals name="fragment_buckets_shots_string">
        <item quantity="zero">No shots added</item>
        <item quantity="one">%1d shot</item>
        <item quantity="other">%1d shots</item>
    </plurals>
    <string name="loading_more_shots">Loading more shots</string>
    <string name="loading_more_likes">Loading more liked shots</string>
    <string name="loading_more_followers">Loading more followers</string>
    <string name="loading_more_projects">Loading more projects</string>
    <string name="loading_more_project_shots">Loading more project shots</string>
    <string name="fragment_bucket_is_empty_text_before_icon">Add some shots to this bucket</string>
    <string name="fragment_bucket_is_empty_text_after_icon">first!</string>

    <string name="fragment_bucket_details_delete_are_you_sure_msg">Delete this %1s bucket?</string>

    <string name="shots_fragment_add_shot_to_bucket_success">Shot successfully added to bucket</string>
    <string name="shots_fragment_remove_shot_from_bucket_success">Shot successfully removed from buckets</string>

    <string name="follower_item_shot">shots</string>

    <string name="notification_text">Check Inbbbox for daily dose of design shots</string>

    <string name="error_database">Cannot change notification time</string>
    <string name="like">LIKE</string>
    <string name="follow">FOLLOW</string>
    <string name="add_to_bucket">ADD TO BUCKET</string>
    <string name="comment">Comment</string>

    <string name="fragment_add_to_bucket_shots">%1d shots</string>
    <string name="fragment_add_to_bucket_shot_created_by">by </string>
    <string name="fragment_add_to_bucket_shot_created_for">for </string>
    <string name="fragment_add_to_bucket_shot_created_on">on %1s</string>
    <string name="fragment_add_to_bucket_there_are_no_buckets_add_one_first">There are no buckets, add one first.</string>
    <string name="fragment_add_to_bucket_title">Add to bucket</string>
    <string name="fragment_remove_from_bucket_title">Remove from bucket</string>

    <string name="fragment_unfollow_details_dialog_text">Unfollow %1s ?</string>
    <string name="fragment_follow_details_dialog_text">Follow %1s ?</string>

    <string name="dialog_fragment_create_bucket_name">Name</string>
    <string name="dialog_fragment_create_bucket_optional">Description (optional)</string>
    <string name="dialog_fragment_create_bucket_title">Create bucket</string>
    <string name="dialog_fragment_create_bucket_creating_new_bucket">Creating new bucket…</string>

    <string name="gif" translatable="false">gif</string>
    <string name="drawer_open" translatable="false">Open drawer</string>
    <string name="drawer_close" translatable="false">Close drawer</string>
    <string name="authorization_error">Authorization error</string>
    <string name="by_label">"by "</string>
    <string name="for_label">" for "</string>
    <string name="info_where_pattern">"in ${where}"</string>
    <string name="info_when_pattern">" on ${when}"</string>
    <string name="info_where_format" formatted="false">"in %1s"</string>
    <string name="info_when_format">"on %1s"</string>
    <string name="about_minute_ago">About minute ago</string>
    <string name="about_sec_ago">About second ago</string>
    <string name="about_hour_ago">About hour ago</string>
    <string name="yesterday">yesterday</string>
    <string name="few_sec_ago">Few seconds ago</string>
    <string name="few_minutes_ago">Few minutes ago</string>
    <string name="few_hours_ago">Few hours ago</string>
    <string name="comment_input_hint">Type your comment</string>
    <string name="load_more_label">Load more comments</string>
    <string name="comments_edit_label">Edit</string>
    <string name="comments_delete_label">Delete</string>
    <string name="comments_cancel_label">Cancel</string>
    <string name="edit_comment_title">Edit comment</string>
    <string name="edit_comment_update">Update comment</string>
    <string name="edit_comment_cancel">Cancel</string>

    <string name="error_to_low_rank">You rank is to low, you should be a \'Player\" or a \'Team\' to
        do this
    </string>
    <string name="comment_deleted_complete">Comment was successfully deleted</string>
    <string name="action_ok">OK</string>
    <string name="delete_comment_waring">This comment will be deleted, are you sure to do that?
    </string>
    <string name="comment_update_complete">Comment updated</string>
    <string name="api_error_429">You are doing too much work! Slow down for a while</string>
    <string name="or_loging_with_guest">or</string>
    <string name="guest_button_text">Use as guest</string>
    <string name="create_account_label">Create Dribbble account</string>
    <string name="guest_label">Guest?</string>
    <string name="add_to_bucket_fragment_create_new_bucket">Create new bucket</string>
    <string name="remove_from_bucket_fragment_remove">Remove shot from the above buckets</string>
    <string name="empty_bucket_item_description">No shots in bucket image.</string>
    <string name="loading">Loading</string>
    <string name="animated_load_ball_description">Animation of bouncing ball indicating loading progress.</string>
    <string name="back_arrow_description">Back arrow image.</string>
    <string name="fullscreen_shot_description">Fullscreen shot image.</string>
    <string name="shot">Shot</string>
    <string name="error_server">Something went wrong while fetching data. Try again.</string>
    <string name="refresh">Refresh</string>

    <string name="like_finish_message">Added to likes</string>
    <string name="like_and_add_to_bucket_message">Shot liked, adding to bucket… </string>
    <string name="commenting_message">Commenting…</string>
    <string name="following_finish_message">Following author</string>

    <string name="user_image_content_description" translatable="false">User image</string>
    <string name="comment_icon_content_description" translatable="false">Comment icon</string>
    <string name="likes_icon_content_description" translatable="false">Likes icon</string>
    <string name="error_no_internet">Couldn\'t connect to the Internet. Please check your connection and try again</string>
    <string name="dont_follow">Don\'t follow &amp; skip</string>
    <string name="most_popular">Most popular</string>
    <string name="on_teams">On teams</string>
    <string name="followers">followers</string>
    <string name="shots">shots</string>
    <string name="following">following</string>
    <string name="shot_liked">Shot liked</string>
    <string name="shot_unliked">Shot unliked</string>
    <string name="projects_empty_view_text">Still waiting for the big shot</string>
    <string name="web" translatable="false">web</string>
    <string name="twitter" translatable="false">twitter</string>
    <string name="no_buckets">No buckets yet</string>
    <string name="team_info_user_name_size">16sp</string>
</resources>
