<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/comment_action_menu"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/details_comment_action_margin_bottom"
    android:layout_marginTop="@dimen/details_comment_action_margin_top"
    android:background="@color/windowBackground"
    android:gravity="center"
    android:orientation="horizontal"
    android:visibility="gone">


    <TextView
        android:id="@+id/comment_action_edit"
        style="@style/TextAppearance.AppCompat.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="@dimen/details_comment_action_icon_padding"
        android:drawableTop="@drawable/ic_edit_comment"
        android:paddingEnd="@dimen/details_comment_action_element_side_margin"
        android:paddingStart="@dimen/details_comment_action_element_side_margin"
        android:text="@string/comments_edit_label"
        android:textColor="@color/actionButtonLabelColor" />


    <TextView
        android:id="@+id/comment_action_delete"
        style="@style/TextAppearance.AppCompat.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="@dimen/details_comment_action_icon_padding"
        android:drawableTop="@drawable/ic_delete_comment"
        android:paddingEnd="@dimen/details_comment_action_element_side_margin"
        android:paddingStart="@dimen/details_comment_action_element_side_margin"
        android:text="@string/comments_delete_label"
        android:textColor="@color/actionButtonLabelColor" />


    <TextView
        android:id="@+id/comment_action_cancel"
        style="@style/TextAppearance.AppCompat.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="@dimen/details_comment_action_icon_padding"
        android:drawableTop="@drawable/ic_cancel_comment"
        android:paddingEnd="@dimen/details_comment_action_element_side_margin"
        android:paddingStart="@dimen/details_comment_action_element_side_margin"
        android:text="@string/comments_cancel_label"
        android:textColor="@color/actionButtonLabelColor" />
</LinearLayout>