<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:minWidth="400dp"
              android:orientation="vertical"
              android:padding="@dimen/margin_default">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/name_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/CreateBucketTextInputStyle">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dialog_fragment_create_bucket_name"
            tools:text="Some title"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/description_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_default"
        android:theme="@style/CreateBucketTextInputStyle">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dialog_fragment_create_bucket_optional"
            tools:text="Some description"/>
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:id="@+id/creating_new_bucket_progress_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_default"
        android:animateLayoutChanges="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/margin_small"
            android:text="@string/dialog_fragment_create_bucket_creating_new_bucket"/>

    </LinearLayout>

</LinearLayout>