<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/shot_item_internal_padding">

    <co.netguru.android.inbbbox.feature.shared.view.RoundedCornersShotImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@color/accent" />

    <co.netguru.android.inbbbox.feature.shared.view.swipingpanel.LongSwipeLayout
        android:id="@+id/long_swipe_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">
        <!-- Bottom View Start-->
        <LinearLayout
            android:id="@+id/bottom_right_wrapper"
            android:layout_width="@dimen/shot_right_swipe_action_panel_width"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:gravity="center_vertical|end"
            android:orientation="horizontal">
            <!--What you want to show-->

            <ImageView
                android:id="@+id/iv_follow"
                style="@style/LongSwipeActionIcons"
                android:contentDescription="@null"
                android:src="@drawable/ic_follow" />

            <ImageView
                android:id="@+id/iv_comment"
                style="@style/LongSwipeActionIcons"
                android:contentDescription="@null"
                android:src="@drawable/selector_comment_swipe" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/_left_wrapper"
            android:layout_width="@dimen/shot_left_swipe_action_panel_width"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_like_action"
                style="@style/LongSwipeActionIcons"
                android:layout_width="wrap_content"
                android:contentDescription="@null"
                android:src="@drawable/selector_like_swipe" />

            <ImageView
                android:id="@+id/iv_plus_image"
                android:layout_width="@dimen/shot_swipe_action_plus_size"
                android:layout_height="@dimen/shot_swipe_action_plus_size"
                android:layout_gravity="center"
                android:contentDescription="@null"
                android:src="@drawable/ic_plus" />

            <ImageView
                android:id="@+id/iv_bucket_action"
                style="@style/LongSwipeActionIcons"
                android:contentDescription="@null"
                android:src="@drawable/selector_bucket_swipe" />
        </LinearLayout>


        <co.netguru.android.inbbbox.feature.shared.view.RoundedCornersShotImageView
            android:id="@+id/iv_shot_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="?selectableItemBackground"
            android:padding="@dimen/shot_background_padding" />
        <!-- Surface View End -->
    </co.netguru.android.inbbbox.feature.shared.view.swipingpanel.LongSwipeLayout>

    <RelativeLayout
        android:id="@+id/shot_details_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/shot_details_shots_tab_height"
        android:layout_marginTop="@dimen/shot_details_shots_tab_margin"
        android:layout_below="@+id/long_swipe_layout"
        android:layout_alignParentStart="true">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/user_imageView"
            android:contentDescription="@string/user_image_content_description"
            android:layout_width="@dimen/shot_details_shots_tab_height"
            android:layout_height="@dimen/shot_details_shots_tab_height"
            android:layout_centerVertical="true"
            app:civ_border_color="@color/white"
            app:civ_border_width="@dimen/drawer_header_photo_border"
            app:civ_fill_color="@color/lightGray" />

        <TextView
            android:id="@+id/user_name_textView"
            style="@style/Font12.Gray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/user_imageView"
            android:layout_centerVertical="true"/>

        <TextView
            android:id="@+id/comments_count_textView"
            style="@style/Font12.Gray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/shot_details_shots_tab_margin"/>

        <ImageView
            android:id="@+id/comment_imageView"
            android:contentDescription="@string/comment_icon_content_description"
            android:layout_width="@dimen/shot_details_shots_tab_image_size"
            android:layout_height="@dimen/shot_details_shots_tab_image_size"
            android:layout_marginEnd="@dimen/shot_details_shots_image_margin"
            android:src="@drawable/ic_comment_grey"
            android:layout_toStartOf="@id/comments_count_textView"
            android:layout_centerVertical="true"/>

        <TextView
            android:id="@+id/likes_count_textView"
            style="@style/Font12.Gray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/comment_imageView"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/shot_details_shots_tab_counts_margin"/>

        <ImageView
            android:id="@+id/likes_imageView"
            android:contentDescription="@string/likes_icon_content_description"
            android:layout_width="@dimen/shot_details_shots_tab_image_size"
            android:layout_height="@dimen/shot_details_shots_tab_image_size"
            android:layout_marginEnd="@dimen/shot_details_shots_image_margin"
            android:src="@drawable/ic_like_grey"
            android:layout_toStartOf="@id/likes_count_textView"
            android:layout_centerVertical="true"/>

    </RelativeLayout>
</RelativeLayout>